sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                                             | **Description**                                                                                                                                                                                                                                       |
| --------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [endpointsCreateOrUpdateSample.ts][endpointscreateorupdatesample]                                         | Create or update the endpoint to the target resource. x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/stable/2024-12-01/examples/EndpointsPutCustom.json                                           |
| [endpointsDeleteSample.ts][endpointsdeletesample]                                                         | Deletes the endpoint access to the target resource. x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/stable/2024-12-01/examples/EndpointsDeleteDefault.json                                         |
| [endpointsGetSample.ts][endpointsgetsample]                                                               | Gets the endpoint to the resource. x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/stable/2024-12-01/examples/EndpointsGetCustom.json                                                              |
| [endpointsListCredentialsSample.ts][endpointslistcredentialssample]                                       | Gets the endpoint access credentials to the resource. x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/stable/2024-12-01/examples/EndpointsPostListCredentials.json                                 |
| [endpointsListIngressGatewayCredentialsSample.ts][endpointslistingressgatewaycredentialssample]           | Gets the ingress gateway endpoint credentials x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/stable/2024-12-01/examples/EndpointsPostListIngressGatewayCredentials.json                           |
| [endpointsListManagedProxyDetailsSample.ts][endpointslistmanagedproxydetailssample]                       | Fetches the managed proxy details x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/stable/2024-12-01/examples/EndpointsPostListManagedProxyDetails.json                                             |
| [endpointsListSample.ts][endpointslistsample]                                                             | List of endpoints to the target resource. x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/stable/2024-12-01/examples/EndpointsList.json                                                            |
| [endpointsUpdateSample.ts][endpointsupdatesample]                                                         | Update the endpoint to the target resource. x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/stable/2024-12-01/examples/EndpointsPatchDefault.json                                                  |
| [generateAwsTemplatePostSample.ts][generateawstemplatepostsample]                                         | Retrieve AWS Cloud Formation template x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/PublicCloud/stable/2024-12-01/examples/GenerateAwsTemplate_Post.json                                         |
| [inventoryGetSample.ts][inventorygetsample]                                                               | Get a InventoryResource x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/PublicCloud/stable/2024-12-01/examples/Inventory_Get.json                                                                  |
| [inventoryListBySolutionConfigurationSample.ts][inventorylistbysolutionconfigurationsample]               | List InventoryResource resources by SolutionConfiguration x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/PublicCloud/stable/2024-12-01/examples/Inventory_ListBySolutionConfiguration.json        |
| [operationsListSample.ts][operationslistsample]                                                           | Lists the available Hybrid Connectivity REST API operations. x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/stable/2024-12-01/examples/OperationsList.json                                        |
| [publicCloudConnectorsCreateOrUpdateSample.ts][publiccloudconnectorscreateorupdatesample]                 | Create a PublicCloudConnector x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/PublicCloud/stable/2024-12-01/examples/PublicCloudConnectors_CreateOrUpdate.json                                     |
| [publicCloudConnectorsDeleteSample.ts][publiccloudconnectorsdeletesample]                                 | Delete a PublicCloudConnector x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/PublicCloud/stable/2024-12-01/examples/PublicCloudConnectors_Delete.json                                             |
| [publicCloudConnectorsGetSample.ts][publiccloudconnectorsgetsample]                                       | Get a PublicCloudConnector x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/PublicCloud/stable/2024-12-01/examples/PublicCloudConnectors_Get.json                                                   |
| [publicCloudConnectorsListByResourceGroupSample.ts][publiccloudconnectorslistbyresourcegroupsample]       | List PublicCloudConnector resources by resource group x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/PublicCloud/stable/2024-12-01/examples/PublicCloudConnectors_ListByResourceGroup.json        |
| [publicCloudConnectorsListBySubscriptionSample.ts][publiccloudconnectorslistbysubscriptionsample]         | List PublicCloudConnector resources by subscription ID x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/PublicCloud/stable/2024-12-01/examples/PublicCloudConnectors_ListBySubscription.json        |
| [publicCloudConnectorsTestPermissionsSample.ts][publiccloudconnectorstestpermissionssample]               | A long-running resource action. x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/PublicCloud/stable/2024-12-01/examples/PublicCloudConnectors_TestPermissions.json                                  |
| [publicCloudConnectorsUpdateSample.ts][publiccloudconnectorsupdatesample]                                 | Update a PublicCloudConnector x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/PublicCloud/stable/2024-12-01/examples/PublicCloudConnectors_Update.json                                             |
| [serviceConfigurationsCreateOrupdateSample.ts][serviceconfigurationscreateorupdatesample]                 | Create or update a service in serviceConfiguration for the endpoint resource. x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/stable/2024-12-01/examples/ServiceConfigurationsPutSSH.json          |
| [serviceConfigurationsDeleteSample.ts][serviceconfigurationsdeletesample]                                 | Deletes the service details to the target resource. x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/stable/2024-12-01/examples/ServiceConfigurationsDeleteSSH.json                                 |
| [serviceConfigurationsGetSample.ts][serviceconfigurationsgetsample]                                       | Gets the details about the service to the resource. x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/stable/2024-12-01/examples/ServiceConfigurationsGetSSH.json                                    |
| [serviceConfigurationsListByEndpointResourceSample.ts][serviceconfigurationslistbyendpointresourcesample] | API to enumerate registered services in service configurations under a Endpoint Resource x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/stable/2024-12-01/examples/ServiceConfigurationsList.json |
| [serviceConfigurationsUpdateSample.ts][serviceconfigurationsupdatesample]                                 | Update the service details in the service configurations of the target resource. x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/stable/2024-12-01/examples/ServiceConfigurationsPatchSSH.json     |
| [solutionConfigurationsCreateOrUpdateSample.ts][solutionconfigurationscreateorupdatesample]               | Create a SolutionConfiguration x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/PublicCloud/stable/2024-12-01/examples/SolutionConfigurations_CreateOrUpdate.json                                   |
| [solutionConfigurationsDeleteSample.ts][solutionconfigurationsdeletesample]                               | Delete a SolutionConfiguration x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/PublicCloud/stable/2024-12-01/examples/SolutionConfigurations_Delete.json                                           |
| [solutionConfigurationsGetSample.ts][solutionconfigurationsgetsample]                                     | Get a SolutionConfiguration x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/PublicCloud/stable/2024-12-01/examples/SolutionConfigurations_Get.json                                                 |
| [solutionConfigurationsListSample.ts][solutionconfigurationslistsample]                                   | List SolutionConfiguration resources by parent x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/PublicCloud/stable/2024-12-01/examples/SolutionConfigurations_List.json                             |
| [solutionConfigurationsSyncNowSample.ts][solutionconfigurationssyncnowsample]                             | Trigger immediate sync with source cloud x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/PublicCloud/stable/2024-12-01/examples/SolutionConfigurations_SyncNow.json                                |
| [solutionConfigurationsUpdateSample.ts][solutionconfigurationsupdatesample]                               | Update a SolutionConfiguration x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/PublicCloud/stable/2024-12-01/examples/SolutionConfigurations_Update.json                                           |
| [solutionTypesGetSample.ts][solutiontypesgetsample]                                                       | Get a SolutionTypeResource x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/PublicCloud/stable/2024-12-01/examples/SolutionTypes_Get.json                                                           |
| [solutionTypesListByResourceGroupSample.ts][solutiontypeslistbyresourcegroupsample]                       | List SolutionTypeResource resources by resource group x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/PublicCloud/stable/2024-12-01/examples/SolutionTypes_ListByResourceGroup.json                |
| [solutionTypesListBySubscriptionSample.ts][solutiontypeslistbysubscriptionsample]                         | List SolutionTypeResource resources by subscription ID x-ms-original-file: specification/hybridconnectivity/resource-manager/Microsoft.HybridConnectivity/PublicCloud/stable/2024-12-01/examples/SolutionTypes_ListBySubscription.json                |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/endpointsCreateOrUpdateSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx dev-tool run vendored cross-env  node dist/endpointsCreateOrUpdateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[endpointscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/endpointsCreateOrUpdateSample.ts
[endpointsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/endpointsDeleteSample.ts
[endpointsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/endpointsGetSample.ts
[endpointslistcredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/endpointsListCredentialsSample.ts
[endpointslistingressgatewaycredentialssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/endpointsListIngressGatewayCredentialsSample.ts
[endpointslistmanagedproxydetailssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/endpointsListManagedProxyDetailsSample.ts
[endpointslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/endpointsListSample.ts
[endpointsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/endpointsUpdateSample.ts
[generateawstemplatepostsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/generateAwsTemplatePostSample.ts
[inventorygetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/inventoryGetSample.ts
[inventorylistbysolutionconfigurationsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/inventoryListBySolutionConfigurationSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/operationsListSample.ts
[publiccloudconnectorscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/publicCloudConnectorsCreateOrUpdateSample.ts
[publiccloudconnectorsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/publicCloudConnectorsDeleteSample.ts
[publiccloudconnectorsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/publicCloudConnectorsGetSample.ts
[publiccloudconnectorslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/publicCloudConnectorsListByResourceGroupSample.ts
[publiccloudconnectorslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/publicCloudConnectorsListBySubscriptionSample.ts
[publiccloudconnectorstestpermissionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/publicCloudConnectorsTestPermissionsSample.ts
[publiccloudconnectorsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/publicCloudConnectorsUpdateSample.ts
[serviceconfigurationscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/serviceConfigurationsCreateOrupdateSample.ts
[serviceconfigurationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/serviceConfigurationsDeleteSample.ts
[serviceconfigurationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/serviceConfigurationsGetSample.ts
[serviceconfigurationslistbyendpointresourcesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/serviceConfigurationsListByEndpointResourceSample.ts
[serviceconfigurationsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/serviceConfigurationsUpdateSample.ts
[solutionconfigurationscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/solutionConfigurationsCreateOrUpdateSample.ts
[solutionconfigurationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/solutionConfigurationsDeleteSample.ts
[solutionconfigurationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/solutionConfigurationsGetSample.ts
[solutionconfigurationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/solutionConfigurationsListSample.ts
[solutionconfigurationssyncnowsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/solutionConfigurationsSyncNowSample.ts
[solutionconfigurationsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/solutionConfigurationsUpdateSample.ts
[solutiontypesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/solutionTypesGetSample.ts
[solutiontypeslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/solutionTypesListByResourceGroupSample.ts
[solutiontypeslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/hybridconnectivity/arm-hybridconnectivity/samples/v1/typescript/src/solutionTypesListBySubscriptionSample.ts
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-hybridconnectivity?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/hybridconnectivity/arm-hybridconnectivity/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
